--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -30,9 +31,20 @@
                 <div class="resproj">
                     <p class="resume">Resume</p>
                     <p class="projects">Projects</p>
-                </div>
+            </div>
             </div>
             <div class="image"><img src="C:\Users\Audi-\Desktop\IMG_6601.jpg"></div>
+        </div>
+        <div class="container">
+            <h1 class="about">About</h1>
+            <p class="black">My name is Kate and I'm a web developer!</p>
+            <p class="grey">Now I'm in 7th grade. I’ve been taking web design courses for the second year and already know a lot! I love creating something new, creativity is my everything. I love to learn and gain experience and knowledge. I really like this direction and that’s why I want to become a designer. I can bring to life all your ideas into an interesting design - let's collaborate! I will be very glad to communicate!</p>
+            <div class="icons">
+                <i class="fa-brands fa-pinterest"></i>
+                <i class="fa-brands fa-telegram"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
         </div>
     </main>
 <footer>
