--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <p class="nice">Nice to meet you</p>
                 <h1 class="lets_create">Let's create<br>website together</h1>
                 <div class="resproj">
-                    <p class="resume">Resume</p>
-                    <p class="projects">Projects</p>
+                    <a href="" class="resume">Resume</a>
+                    <a href="" class="projects">Projects</a>
             </div>
             </div>
-            <div class="image"><img src="C:\Users\Audi-\Desktop\IMG_6601.jpg"></div>
+            <div class="image"><img src="lesson_15_semester_project\IMG_6601.jpg"></div>
         </div>
         <div class="container">
             <h1 class="about">About</h1>
